--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ahj_2",
+  "name": "goblin_game",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "eslint": "^8.8.0",
@@ -25,7 +26,9 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.4.7",
+    "jest-environment-jsdom": "^27.4.7",
     "mini-css-extract-plugin": "^2.5.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.3"
